[fixed 12085141] issue of long words breaking layout on narrow/mobile display

--- a/content/reui/themes/sage-green/base.css
+++ b/content/reui/themes/sage-green/base.css
@@ -512,7 +512,7 @@ img
 
 .row-edit
 {
-    position: relative;
+    /*position: relative;*/
     padding: 2px 0.75em;
 }
 
